@startuml


title Simpleworklist Domain Class Modell
'https://plantuml.com/class-diagram

left to right direction
'top to bottom direction

scale 1200 width

package persistent {

  entity Context {
       String nameDe
       String nameEn
       list()
       search()
       addNew()
       edit()
       delete()
  }

  entity Project {
      String name
      String description
      listVisitsOfPet()
      addNew()
  }

  entity Task {
      String name
      list()
      search()
      addNew()
      edit()
      delete()
  }

  entity ChatMessage {
      String xyz
      list()
      search()
      addNew()
      edit()
      delete()
  }

  entity UserAccount {
      String name
      list()
      search()
      addNew()
      edit()
      delete()
  }

  entity UserAccountPassword {
      String name
      list()
      listSpecialtiesOfVet()
      search()
      addNew()
      edit()
      delete()
  }

  entity UserPasswordRecovery {
      String name
      list()
      listSpecialtiesOfVet()
      search()
      addNew()
      edit()
      delete()
  }

  entity UserRegistration {
      String name
      list()
      listSpecialtiesOfVet()
      search()
      addNew()
      edit()
      delete()
  }

  'Owner "one"  *--> "many"  Pet: pets
  'Pet "one" *--> "many" Visit: visits
  'Pet "many"  o-->  "one" PetType: petType
  'Vet "many" o--> "many" Specialty: specialties

}

package transient {
  class LoginForm {}
  class UserAccountForm {}
  class UserDetailsDto {}
  class UserSessionBean {}
  class UserChangeLanguageForm {}
  class NewContextForm {}
  class ChatMessageForm {}
  class Breadcrumb {}
  class BreadcrumbItem {}
}
@enduml
